mysite/mysite/static/css/style.css
/*******************************************************************************
 * $Id: style.css,v 1.17 2013-06-24 20:58:12-07 dmf - $                                                                       
 * Derek Frank (derekmfrank@gmail.com)                                          
 *                                                                              
 * Theme Name: dmf
 *                                                                              
 * Original CSS code written by archlinux.org.
 * Taken and altered by Derek Frank.
 *                                                                              
 * NAME
 *   style.css - Web Style
 *
 * DESCRIPTION
 *   CSS stylesheet for derekmfrank.com.
 *
 ******************************************************************************/

/* import the global navbar stylesheet */
@import url("navbar.css");

/* simple reset */
* {
    margin: 0;
    padding: 0;
    line-height: 1.4;
}

/* webtoolkit.clearfix.css */
.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}
.clearfix {
    display: inline-block;
}
html[xmlns] .clearfix {
    display: block;
}
* html .clearfix {
    height:  1%;
}

/* general styling */
body {
    min-width:              650px; /*1024px;*/
    min-height:             550px;
    background:             #f6f9fc;
    color:                  #001f00;
    font:                   normal 9pt sans-serif;
    font-family:            Lato, Ubuntu, PT Sans, Open Sans, Droid Sans, Helvetica, Aerial, Arial, sans-serif;
    text-align:             center;
    margin:                 0;
}

p {
    margin: .33em 0 1em;
}

ol,
ul {
    margin-bottom: 1em;
    padding-left: 2em;
}

    ul {
        list-style: circle;
    }

code {
    font: 1.2em monospace;
    background: #ffd;
    padding: 0.15em 0.25em;
}

pre {
    font: 1.2em monospace;
    border: 1px soled #bdb;
    background: #dfd;
    padding: 0.5em;
    margin: 1em;
}

    pre code {
        display: block;
        background: none;
    }

blockquote {
    margin: 1.5em 2em;
}

input {
    vertical-align: middle;
}

select[multiple] {
    padding: 1px 0;
}

select 

    select[multiple] option {
        padding: 0 0.5em 0 0.3em;
    }

input[type=submit] {
    padding: 0 0.6em;
}

.clear {
    clear: both;
}

.hide {
    display: none;
}

.inline {
    display: inline;
}

.block {
    display: block;
}

.italic {
    font-style: italic;
}

hr {
    border: none;
    border-top: 1px solid #888;
}

img {
    border: 0;
}

/* scale fonts down to a sane default (16 * .812 = 13px) */
#content {
    /*
    font-size: 0.812em;
    */
}

/* link style */

a {
    text-decoration: none;
}

    a:link,
    th a:visited {
        color: #07b;
    }

    a:visited {
        color: #666;
    }

    a:hover {
        text-decoration: underline;
        color: #0000ff;
    }

    a:active {
        color: #e90; /* e90 */
    }

a.header,
a.header:visited {
    text-decoration: none;
    color: #000
}
a.header:hover {
    text-decoration: none;
}

/* special anchor elements */
a.headerlink {
    visibility: hidden;
    padding-left: 0.5em;
}

/* headings */
h1 {
    font-size: 1.4em;
    font-style: bold;
    color: #000011;
}

h2 {
    font-size: 1.5em;
    color: #000000;
    margin-bottom: 0.5em;
    border-bottom: 1px solid #00ff00; /* 33cc33 */
}

h2.sub {
    border-bottom: 1px dashed #00ff00;
    font-size: 1.3em;
}

h3 {
    font-size: 1.2em;
    /* margin-top: .5em; */
}

h3:hover > a.headerlink {
    visibility: visible;
}

h4 {
    font-size: 1.15em;
    margin-top: .2em;
}

h5 {
    font-size: 1em;
    margin-top: .2em;
}

/* general layout */
div#miscinfo {
    margin: 0 auto;
    float: left;
    text-align: left;
}

div#container {
    width: 924px;
    /*
    width: 1024px;
    */
    margin: auto;
}

div#content-wrapper {
    width: 100%;
    height: 100%;
    margin: auto;
    /* min-height: 768px; */
    /* margin-top: 20px;
    padding-left seems to cause issues
    padding-top: 14px;
    padding-bottom: 14px;
    */
    text-align: left;
}

div#content-left-wrapper {
    float: left;
    width: 100%; /* req to keep content above sidebar in source code */
}

div#content {
    width: 95%;
    margin: 12px auto;
    text_align: left;
}

div#content-left {
    margin: 12px 36% 12px 12px;
    /*
    margin: 12px 340px 0 12px;
    */
    float: left;
    width: 64%;
    /*
    width: 672px;
    */
}

div#content-right {
    float: right;
    width: 30%;
    /*
    width: 300px;
    margin-left: -312px;
    */
    margin-left: -312px;
    margin-top: 12px;
    margin-right: 12px;
    margin-bottom: 12px
}

div.box {
    margin-bottom: 1.5em;
    padding:                        1em;  /* 0.65em; */
    background:                     #ccffcc; /* ecf2f5; */
    border:                         1px solid #00ff00; /* #33cc33 */
    overflow:                       hidden;
    /*
    -moz-border-radius:             8px;
    -webkit-border-radius:          8px;
    border-radius:                  8px;
    */
}

footer, div#footer {
    clear: both;
    margin: 2em 0 1em;
}

    footer p, div#footer p {
        margin: 0;
        text-align: center !important;
        font-size: 0.85em;
    }

/* alignment */
div#center {
    margin-left: auto !important;
    margin-right: auto !important;
    width: auto !important;
    text-align: center !important;
}

div.center,
table.center,
img.center {
    width: auto;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.left {
    width:  auto;
    text-align: left;
    margin-left:    auto;
    margin-right:   auto;
}

div.right,
table.right,
img.right {
    width: auto;
    text-align: right;
    float: right;
    margin-left: auto;
    margin-right: auto;
}

p.center,
td.center,
th.center {
    text-align: center;
}

/* table generics */
table {
    width: 100%;
    border-collapse: collapse;
}

    table .wrap {
        white-space: normal;
    }

th,
td {
    white-space: nowrap;
    text-align: left;
}

    th {
        vertical-align: middle;
        font-weight: bold;
    }

    td {
        vertical-align: top;
    }

/* forms and input styling */
form p {
    margin: 0.5em 0;
}

fieldset {
    border: 0;
}

label {
    width: 12em;
    vertical-align: top;
    display: inline-block;
    font-weight: bold;
}

input[type=text],
input[type=password],
textarea {
    padding: 0.10em;
}

/* navbar list */
#navbar span.nb-separator,
#navbar.nb-separator ul li.nb-separator {
    color: #00ff00 !important;
    font-weight: bold !important;
}
/* highlight current website in the navbar */
#navbar.nb-home ul li#nb-home a,
#navbar.nb-blog ul li#nb-blog a,
#navbar.nb-portfolio ul li#nb-portfolio a,
#navbar.nb-about ul li#nb-about a,
#navbar.nb-mff ul li#nb-mff a,
#navbar.nb-admin ul li#nb-admin a {
    color: #000;
    font-weight: bold;
}


/* specific content */
span.postinfo {
    font-size: .8em;
}
span.postinfo span.timestamp {
    font-style: italic;
    font-size: 1em;
}
span.timestamp {
    font-size: .8em;
    font-style: italic;
}

img#mypic {
    border:                         solid 5px #00ff00;
    -moz-border-radius:             12px;
    -webkit-border-radius:          12px;
    border-radius:                  12px;
    width:                          90%;
    height:                         90%;
}

.entryborder {
    border-top: 1px dashed #00ff00;
    max-width: 95%;
    margin-bottom: 10px;
}

.endborder {
    border-top:                     1px dashed #cccccc;
    margin-top:                     10px;
    margin-bottom:                  5px;
}

.topic {
    margin:     10px;
    padding:    5px;
}

